@@ -2,6 +2,9 @@
 	- Fix for dnsoverquic and dnstap to use the correct dnstap
 	  environment.
 
+16 October 2024: Wouter
+	- Fix for dnstap with dnscrypt and dnstap without dnsoverquic.
+
 14 October 2024: Wouter
 	- Fix to display warning if quic-port is set but dnsoverquic is not
 	  enabled when compiled.
